--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ nav span:hover{
 .content-left{
   max-width:900px;
   width:100%;
-  margin-left:0;
+  margin-left:6vw; /* ← DESPLAZAMIENTO FINO A LA DERECHA */
 }
 
 /* ===== TYPO ===== */
@@ -177,7 +177,7 @@ footer{
   </div>
 </section>
 
-<!-- ===== SOBRE MÍ (ALINEADO IZQUIERDA) ===== -->
+<!-- ===== SOBRE MÍ ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
@@ -273,7 +273,7 @@ function animateCursor(){
 }
 animateCursor();
 
-/* ===== HERO TYPE CON BLUR ===== */
+/* ===== HERO TYPE ===== */
 const hero=document.getElementById("heroTitle");
 const text="Industrial Design";
 
