--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ nav span:hover{
 .content-left{
   max-width:900px;
   width:100%;
-  margin-left:6vw; /* ← DESPLAZAMIENTO FINO A LA DERECHA */
+  margin-left:6vw;
 }
 
 /* ===== TYPO ===== */
@@ -95,6 +95,10 @@ h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
+}
+
+.content-center h1{
+  font-size:clamp(84px,7vw,140px); /* ← HERO MÁS GRANDE */
 }
 
 h2{
