--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ nav span:hover{
 /* ===== CONTENT VARIANTS ===== */
 .content-center{
   max-width:900px;
-  text-align:center;
+  text-align:left; /* ← CAMBIO CLAVE */
 }
 
 .content-left{
@@ -98,7 +98,7 @@ h1{
 }
 
 .content-center h1{
-  font-size:clamp(84px,7vw,140px); /* ← HERO MÁS GRANDE */
+  font-size:clamp(84px,7vw,140px);
 }
 
 h2{
@@ -171,7 +171,7 @@ footer{
   <span data-scroll="4">Contacto</span>
 </nav>
 
-<!-- ===== INICIO (CENTRADO) ===== -->
+<!-- ===== INICIO ===== -->
 <section class="section">
   <div class="content-center">
     <h1 id="heroTitle"></h1>
