--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ nav span:hover{
 /* ===== CONTENT VARIANTS ===== */
 .content-center{
   max-width:900px;
-  text-align:left; /* ← CAMBIO CLAVE */
+  text-align:left;
+  margin-left:2vw; /* ← AJUSTE FINO EXTRA */
 }
 
 .content-left{
