--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ nav span:hover{
 .content-center{
   max-width:900px;
   text-align:left;
-  margin-left:2vw; /* ← AJUSTE FINO EXTRA */
+  margin-left:1vw; /* ← AJUSTE FINAL A LA IZQUIERDA */
 }
 
 .content-left{
