--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ nav span:hover{
 .content-center{
   max-width:900px;
   text-align:left;
-  margin-left:1vw; /* ← AJUSTE FINAL A LA IZQUIERDA */
+  margin-left:1vw;
 }
 
 .content-left{
@@ -96,6 +96,7 @@ h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
+  padding-left:0.8vw; /* ← DESPLAZAMIENTO DEL TEXTO */
 }
 
 .content-center h1{
