--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@ h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
-  padding-left:0.8vw; /* ← DESPLAZAMIENTO DEL TEXTO */
 }
 
 .content-center h1{
@@ -115,6 +114,12 @@ p{
   color:#aaa;
   max-width:640px;
   line-height:1.7;
+}
+
+/* 👉 DESPLAZAMIENTO SUTIL DEL TEXTO */
+.content-left p,
+.content-center p{
+  margin-left:1.2vw;
 }
 
 /* ===== PORTFOLIO GRID ===== */
