--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@ p{
   line-height:1.7;
 }
 
+/* 👉 MICRO DESPLAZAMIENTO FINAL DEL TEXTO */
+.content-left p,
+.content-center p{
+  margin-left:0.6vw;
+}
+
 /* ===== PORTFOLIO GRID ===== */
 .grid{
   display:grid;
