--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ p{
   line-height:1.7;
 }
 
-/* 👉 MICRO DESPLAZAMIENTO FINAL DEL TEXTO */
+/* 👉 MICRO AJUSTE FINAL */
 .content-left p,
 .content-center p{
-  margin-left:0.6vw;
+  margin-left:0.35vw;
 }
 
 /* ===== PORTFOLIO GRID ===== */
