--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@ nav span{
   font-size:11px;
   letter-spacing:.3em;
   text-transform:uppercase;
-  color:#aaa; /* más blanco */
+  color:#aaa;
   cursor:pointer;
   transition:.4s;
+  padding-top:4px; /* ↓ ajuste fino vertical */
 }
 
 nav span:hover{
@@ -171,7 +172,7 @@ footer{
   padding:120px 0;
   font-size:12px;
   letter-spacing:.2em;
-  color:#aaa; /* más blanco */
+  color:#aaa;
   border-top:1px solid #1c1c1c;
 }
 
@@ -189,7 +190,6 @@ footer{
   <span data-scroll="4">Contacto</span>
 </nav>
 
-<!-- ===== INICIO ===== -->
 <section class="section">
   <div class="content-center">
     <h1 id="heroTitle"></h1>
@@ -199,51 +199,36 @@ footer{
   </div>
 </section>
 
-<!-- ===== SOBRE MÍ ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
     <p class="reveal">
       Diseñadora industrial con formación técnica y sensibilidad arquitectónica.
-      Trabajo desde la estructura, el material y la proporción, buscando soluciones
-      claras, funcionales y duraderas.
+      Trabajo desde la estructura, el material y la proporción.
     </p>
   </div>
 </section>
 
-<!-- ===== PORTFOLIO ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Portfolio</h1>
     <div class="grid reveal">
-      <div class="project">
-        <h2>BAORI</h2>
-        <p>Espacio colectivo modular.</p>
-      </div>
-      <div class="project">
-        <h2>NODE</h2>
-        <p>Sistema estructural minimal.</p>
-      </div>
-      <div class="project">
-        <h2>LUMORA</h2>
-        <p>Iluminación arquitectónica.</p>
-      </div>
+      <div class="project"><h2>BAORI</h2><p>Espacio colectivo modular.</p></div>
+      <div class="project"><h2>NODE</h2><p>Sistema estructural minimal.</p></div>
+      <div class="project"><h2>LUMORA</h2><p>Iluminación arquitectónica.</p></div>
     </div>
   </div>
 </section>
 
-<!-- ===== CV ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">CV</h1>
     <p class="reveal">
-      Formación en ingeniería de diseño industrial, experiencia en desarrollo de
-      producto, diseño técnico y optimización estructural.
+      Formación en ingeniería de diseño industrial y experiencia en desarrollo de producto.
     </p>
   </div>
 </section>
 
-<!-- ===== CONTACTO ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Contacto</h1>
@@ -251,113 +236,89 @@ footer{
   </div>
 </section>
 
-<footer>
-INDUSTRIAL DESIGN
-</footer>
+<footer>INDUSTRIAL DESIGN</footer>
 
 <script>
+window.addEventListener("load",()=>document.body.style.opacity="1");
 
-/* ===== ENTRADA ===== */
-window.addEventListener("load",()=>{
-  document.body.style.opacity="1";
-});
-
-/* ===== CURSOR ===== */
-const cursor=document.querySelector(".cursor");
+/* Cursor */
+const c=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0,v=0,lx=0,ly=0;
-
-document.addEventListener("mousemove",e=>{
+addEventListener("mousemove",e=>{
   mx=e.clientX; my=e.clientY;
-  v=Math.hypot(mx-lx,my-ly);
-  lx=mx; ly=my;
+  v=Math.hypot(mx-lx,my-ly); lx=mx; ly=my;
 });
-
-(function animateCursor(){
+(function anim(){
   const s=0.12+Math.min(v*0.02,0.35);
   x+=(mx-x)*s; y+=(my-y)*s;
-  cursor.style.left=x+"px";
-  cursor.style.top=y+"px";
-  requestAnimationFrame(animateCursor);
+  c.style.left=x+"px"; c.style.top=y+"px";
+  requestAnimationFrame(anim);
 })();
 
-/* ===== HERO TEXT ===== */
-const hero=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((c,i)=>{
+/* Hero text */
+const h=document.getElementById("heroTitle");
+"Industrial Design".split("").forEach((ch,i)=>{
   const s=document.createElement("span");
-  s.textContent=c;
+  s.textContent=ch;
   s.style.opacity=0;
   s.style.display="inline-block";
   s.style.transform="translateY(40px)";
   s.style.filter="blur(8px)";
   s.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  hero.appendChild(s);
+  h.appendChild(s);
 });
+setTimeout(()=>h.querySelectorAll("span").forEach(s=>{
+  s.style.opacity=1; s.style.transform="translateY(0)"; s.style.filter="blur(0)";
+}),200);
 
-setTimeout(()=>{
-  hero.querySelectorAll("span").forEach(s=>{
-    s.style.opacity=1;
-    s.style.transform="translateY(0)";
-    s.style.filter="blur(0)";
-  });
-},200);
-
-/* ===== SCROLL REVEAL ===== */
-const obs=new IntersectionObserver(e=>{
-  e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible"));
-},{threshold:.2});
+/* Reveal */
+const obs=new IntersectionObserver(e=>e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible")),{threshold:.2});
 document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
 
-/* ===== NAV BLUR ON SCROLL ===== */
-window.addEventListener("scroll",()=>{
-  const nav=document.querySelector("nav");
+/* Nav scroll effect */
+addEventListener("scroll",()=>{
+  const n=document.querySelector("nav");
   if(scrollY>40){
-    nav.style.background="rgba(10,10,10,0.65)";
-    nav.style.backdropFilter="blur(16px)";
+    n.style.background="rgba(10,10,10,0.65)";
+    n.style.backdropFilter="blur(16px)";
   }else{
-    nav.style.background="rgba(10,10,10,0.45)";
-    nav.style.backdropFilter="blur(12px)";
+    n.style.background="rgba(10,10,10,0.45)";
+    n.style.backdropFilter="blur(12px)";
   }
 });
 
-/* ===== NAV SCROLL ===== */
+/* Nav scroll */
 document.querySelectorAll("nav span").forEach(b=>{
   b.onclick=()=>document.querySelectorAll(".section")[b.dataset.scroll]
     .scrollIntoView({behavior:"smooth"});
 });
 
-/* ===== THREE BACKGROUND ===== */
+/* Three background */
 const scene=new THREE.Scene();
-const camera=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
-camera.position.z=4;
-
-const renderer=new THREE.WebGLRenderer({alpha:true});
-renderer.setSize(innerWidth,innerHeight);
-renderer.setPixelRatio(Math.min(devicePixelRatio,2));
-document.body.appendChild(renderer.domElement);
-
-const mesh=new THREE.Mesh(
+const cam=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
+cam.position.z=4;
+const r=new THREE.WebGLRenderer({alpha:true});
+r.setSize(innerWidth,innerHeight);
+r.setPixelRatio(Math.min(devicePixelRatio,2));
+document.body.appendChild(r.domElement);
+const m=new THREE.Mesh(
   new THREE.IcosahedronGeometry(1.8,2),
   new THREE.MeshStandardMaterial({wireframe:true,color:0xffffff,opacity:.05,transparent:true})
 );
-scene.add(mesh);
-
-const light=new THREE.PointLight(0xffffff,1);
-light.position.set(5,5,5);
-scene.add(light);
-
-(function animate(){
-  mesh.rotation.x+=.0015;
-  mesh.rotation.y+=.0015;
-  renderer.render(scene,camera);
-  requestAnimationFrame(animate);
+scene.add(m);
+const l=new THREE.PointLight(0xffffff,1);
+l.position.set(5,5,5);
+scene.add(l);
+(function loop(){
+  m.rotation.x+=.0015; m.rotation.y+=.0015;
+  r.render(scene,cam);
+  requestAnimationFrame(loop);
 })();
-
-window.onresize=()=>{
-  renderer.setSize(innerWidth,innerHeight);
-  camera.aspect=innerWidth/innerHeight;
-  camera.updateProjectionMatrix();
+onresize=()=>{
+  r.setSize(innerWidth,innerHeight);
+  cam.aspect=innerWidth/innerHeight;
+  cam.updateProjectionMatrix();
 };
-
 </script>
 
 </body>
